<?xml version="1.0"?>
<package format="2">
  <name>ars_sim_robot</name>
  <version>1.0.0</version>
  <description>The ars_sim_robot</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>

  <depend>dji_tello_msgs</depend>

  <depend>ars_lib_helpers</depend>

  <!-- exec dependencies -->
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-nvector</exec_depend>
  <exec_depend>python-rospkg</exec_depend>

  <export>
  </export>

</package>
