<?xml version="1.0"?>
<package format="3">
  <name>ars_sim_robot</name>
  <version>0.0.1</version>
  <description>The ars_sim_robot</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>

  <license>BSD</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>

  <depend>ars_robot_msgs</depend>
  <depend>ars_lib_helpers</depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-nvector</exec_depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
